2012-05-30  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r118986.
        http://trac.webkit.org/changeset/118986
        https://bugs.webkit.org/show_bug.cgi?id=87914

        Caused several IndexedDB browser_test failures on Chromium
        canary builders (Requested by rafaelw_ on #webkit).

        * storage/indexeddb/basics-expected.txt:
        * storage/indexeddb/basics-workers-expected.txt:
        * storage/indexeddb/create-and-remove-object-store-expected.txt:
        * storage/indexeddb/cursor-continue-expected.txt:
        * storage/indexeddb/cursor-update-expected.txt:
        * storage/indexeddb/database-basics-expected.txt:
        * storage/indexeddb/deleteIndex-expected.txt:
        * storage/indexeddb/factory-cmp-expected.txt:
        * storage/indexeddb/get-keyrange-expected.txt:
        * storage/indexeddb/index-basics-expected.txt:
        * storage/indexeddb/index-basics-workers-expected.txt:
        * storage/indexeddb/index-count-expected.txt:
        * storage/indexeddb/index-unique-expected.txt:
        * storage/indexeddb/invalid-keys-expected.txt:
        * storage/indexeddb/key-generator-expected.txt:
        * storage/indexeddb/key-type-array-expected.txt:
        * storage/indexeddb/keypath-edges-expected.txt:
        * storage/indexeddb/keyrange-expected.txt:
        * storage/indexeddb/objectstore-autoincrement-expected.txt:
        * storage/indexeddb/objectstore-basics-expected.txt:
        * storage/indexeddb/objectstore-basics-workers-expected.txt:
        * storage/indexeddb/objectstore-count-expected.txt:
        * storage/indexeddb/open-cursor-expected.txt:
        * storage/indexeddb/readonly-expected.txt:
        * storage/indexeddb/resources/basics.js:
        (test):
        (openCallback):
        * storage/indexeddb/resources/create-and-remove-object-store.js:
        (testCreateAndRemove):
        (cleanDatabase):
        (tryOnceMore):