@@ -1,3 +1,13 @@
+2012-05-30  Zhenyao Mo  <zmo@google.com>
+
+        WebKit incorrectly clears the alpha channel on readPixels, even for Framebuffers
+        https://bugs.webkit.org/show_bug.cgi?id=87310
+
+        Reviewed by Kenneth Russell.
+
+        * fast/canvas/webgl/context-attributes-alpha-depth-stencil-antialias-expected.txt:
+        * fast/canvas/webgl/context-attributes-alpha-depth-stencil-antialias.html: synced with khronos
+
 2012-05-30  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r118986.
